Update Images Webp & svg

--- a/index.html
+++ b/index.html
@@ -30,8 +30,24 @@
     <!-- Header -->
 
     <header>
-        <nav class="navBar">
+        <nav class="menu">
+            <ul>
+                <li><a href="../views/sign_In.html" class="link">Sign in</a></li>
+                <li><a href="../views/my_Cart.html" class="link">My cart</a></li>
+                <li><a href="home.html" class="link">Home</a></li>
+                <li><a href="../views/store.html" class="link">Store</a></li>
+                <li><a href="../views/gift_Cards.html" class="link">Gift cards</a></li>
+            </ul>
         </nav>
+        <section class="contactUs">
+            <ul>
+                <li><a href="" class="item"></a></li>
+                <li><a href="" class="item"></a></li>
+                <li><a href="" class="item"></a></li>
+                <li><a href="" class="item"></a></li>
+                <li><a href="" class="item"></a></li>
+            </ul>
+        </section>
 
     </header>
 
