--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
         </section>
 
     </header>
+    <header>
+        <h1 class="title">
+            Break a leg
+        </h1>
+    </header>
 
     <!-- Bootstrap -->
 
