--- a/index.html
+++ b/index.html
@@ -50,11 +50,50 @@
         </section>
 
     </header>
-    <header>
-        <h1 class="title">
-            Break a leg
-        </h1>
-    </header>
+    <main class="container">
+        <section class="heroSection">
+
+        </section>
+
+        <section class="bestSellers">
+
+        </section>
+        <section class="advertising">
+
+        </section>
+        <section class="newArrivals">
+
+        </section>
+        <section class="getOff">
+
+        </section>
+        <section class="giftCards">
+
+        </section>
+    </main>
+
+    <footer class="footerContainer">
+        <section class="footer">
+            <articles class="socialMedia">
+                <h3>Contact us</h3>
+
+
+            </articles>
+            <articles class="logo">
+
+            </articles>
+            <articles class="payments">
+                <h3>Payments</h3>
+
+            </articles>
+
+
+        </section>
+
+    </footer>
+
+
+
 
     <!-- Bootstrap -->
 
