Update Footer Development

--- a/index.html
+++ b/index.html
@@ -50,27 +50,50 @@
         </section>
 
     </header>
+
+    <!-- Main -->
+
     <main class="container">
+
+        <!-- Hero Section -->
+
         <section class="heroSection">
 
         </section>
 
+        <!-- Best Sellers -->
+
         <section class="bestSellers">
 
         </section>
+
+        <!-- Advertising -->
+
         <section class="advertising">
 
+
         </section>
+
+        <!-- New Arrivals -->
+
         <section class="newArrivals">
 
         </section>
+
+        <!-- Get 25% Off -->
+
         <section class="getOff">
 
         </section>
+
+        <!-- Gift Cards -->
+
         <section class="giftCards">
 
         </section>
     </main>
+
+    <!-- Footer -->
 
     <footer class="footerContainer">
         <section class="footer">
@@ -89,11 +112,15 @@
 
 
         </section>
-
+        <section class="development">
+            <img src="" alt="">
+            <article class="developer">
+                <p>Developed and made with 💖 by Diego Marin </p>
+                <p>© 2023 Raccoon. All rights reserved.</p>
+                <p> Medellin - Colombia</p>
+            </article>
+        </section>
     </footer>
-
-
-
 
     <!-- Bootstrap -->
 
