--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
 
     <!-- Header -->
-
+<img src="img/brand_Red.webp" alt="" class="brand">
     <header>
         <nav class="menu">
             <ul>
