--- a/index.html
+++ b/index.html
@@ -28,15 +28,19 @@
 <body>
 
     <!-- Header -->
-<img src="img/brand_Red.webp" alt="" class="brand">
+
     <header>
+        <h1>Break a Leg</h1>
+        <img src="img/menu_Icon.svg" alt="" class="menu_Icon">
+        <img src="img/brand_Red.webp" alt="Marca Break a Leg" class="brand">
+
         <nav class="menu">
             <ul>
                 <li><a href="../views/sign_In.html" class="link">Sign in</a></li>
                 <li><a href="../views/my_Cart.html" class="link">My cart</a></li>
-                <li><a href="home.html" class="link">Home</a></li>
+                <li><a href="index.html" class="link">Home</a></li>
                 <li><a href="../views/store.html" class="link">Store</a></li>
-                <li><a href="../views/gift_Cards.html" class="link">Gift cards</a></li>
+                <li><a href="index.html#giftCards" class="link">Gift cards</a></li>
             </ul>
         </nav>
         <section class="contactUs">
@@ -88,7 +92,7 @@
 
         <!-- Gift Cards -->
 
-        <section class="giftCards">
+        <section class="giftCards" id="giftCards">
 
         </section>
     </main>
