--- a/index.html
+++ b/index.html
@@ -30,11 +30,19 @@
     <!-- Header -->
 
     <header>
-        <h1>Break a Leg</h1>
-        <img src="img/menu_Icon.svg" alt="" class="menu_Icon">
-        <img src="img/brand_Red.webp" alt="Marca Break a Leg" class="brand">
-
-        <nav class="menu">
+        <nav class="menuTop">
+            <img src="img/menu_Icon.svg" alt="Menu icon" class="drawerIcon">
+            <img src="img/brand_Red.webp" alt="Break a Leg brand" class="brand">
+            <section class="menuIcons">
+                <ul>
+                    <li><a href=""><img class="icon" src="img/moon_Icon.svg" alt=""></a></li>
+                    <li><a href=""><img class="icon" src="img/user_Icon.svg" alt=""></a></li>
+                    <li><a href=""><img class="icon" src="img/whishlist_White_Icon.svg" alt=""></a></li>
+                    <li><a href=""><img class="icon" src="img/empty_Shopping_Cart.svg" alt=""></a></li>
+                </ul>
+            </section>
+        </nav>
+        <nav class="menuSide">
             <ul>
                 <li><a href="../views/sign_In.html" class="link">Sign in</a></li>
                 <li><a href="../views/my_Cart.html" class="link">My cart</a></li>
@@ -42,17 +50,16 @@
                 <li><a href="../views/store.html" class="link">Store</a></li>
                 <li><a href="index.html#giftCards" class="link">Gift cards</a></li>
             </ul>
+            <section class="contactUs">
+                <ul>
+                    <li><a href="" class="item"></a></li>
+                    <li><a href="" class="item"></a></li>
+                    <li><a href="" class="item"></a></li>
+                    <li><a href="" class="item"></a></li>
+                    <li><a href="" class="item"></a></li>
+                </ul>
+            </section>
         </nav>
-        <section class="contactUs">
-            <ul>
-                <li><a href="" class="item"></a></li>
-                <li><a href="" class="item"></a></li>
-                <li><a href="" class="item"></a></li>
-                <li><a href="" class="item"></a></li>
-                <li><a href="" class="item"></a></li>
-            </ul>
-        </section>
-
     </header>
 
     <!-- Main -->
