--- a/index.html
+++ b/index.html
@@ -46,9 +46,12 @@
             </ul>
         </section>
         <nav class="menuSide">
-            <label for="menuSide">
-                <img class="close" src="img/close_Arrow.svg" alt="Close icon">
-            </label>
+            <section class="top">
+                <img class="brand" src="img/skull.svg" alt="Break a Leg brand">
+                <label for="menuSide">
+                    <img class="close" src="img/close_Arrow.svg" alt="Close icon">
+                </label>
+            </section>
             <section class="menu">
                 <ul>
                     <li><a href="../views/sign_In.html" class="link">Sign in</a></li>
@@ -59,13 +62,13 @@
                 </ul>
             </section>
             <section class="contactUs">
-                <p>Contact us</p>
+                <p>Contact us...</p>
                 <ul>
-                    <li><a href="" class="item"></a></li>
-                    <li><a href="" class="item"></a></li>
-                    <li><a href="" class="item"></a></li>
-                    <li><a href="" class="item"></a></li>
-                    <li><a href="" class="item"></a></li>
+                    <li><a href="https://www.instagram.com/" target="_blank" class="item"><img src="img/instagram.svg" alt="" class="itemSocial"></a></li>
+                    <li><a href="https://www.youtube.com/" target="_blank" class="item"><img src="img/youtube.svg" alt="" class="itemSocial"></a></li>
+                    <li><a href="https://www.facebook.com/" target="_blank" class="item"><img src="img/facebook.svg" alt="" class="itemSocial"></a></li>
+                    <li><a href="https://twitter.com/?lang=es" target="_blank" class="item"><img src="img/twitter.svg" alt="" class="itemSocial"></a></li>
+                    <li><a href="https://co.pinterest.com/" target="_blank" class="item"><img src="img/pinterest.svg" alt="" class="itemSocial"></a></li>
                 </ul>
             </section>
         </nav>
