--- a/index.html
+++ b/index.html
@@ -81,7 +81,17 @@
         <!-- Hero Section -->
 
         <section class="heroSection">
-
+            <div class="heroSectionCentered">
+                <article class="paragraph">
+                    <h1 class="break">Break a Leg</h1>
+                    <h2 class="subtitle">¡Where your passion is just beginning!</h2>
+                    <div class="cta">
+                        <a href="index.html#getOff" class="ctaDiscount">Discount</a>
+                        <a href="index.html#newArrivals" class="ctaNewArrivals">New Arrivals</a>
+                    </div>
+                </article>
+                <img src="img/laptop.webp" alt="Laptop Image" class="laptop">
+            </div>
         </section>
 
         <!-- Best Sellers -->
@@ -99,13 +109,13 @@
 
         <!-- New Arrivals -->
 
-        <section class="newArrivals">
+        <section class="newArrivals" id="newArrivals">
 
         </section>
 
         <!-- Get 25% Off -->
 
-        <section class="getOff">
+        <section class="getOff" id="getOff">
 
         </section>
 
