--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
                     <h1 class="break">Break a Leg</h1>
                     <h2 class="subtitle">¡Where your passion is just beginning!</h2>
                     <div class="cta">
-                        <a href="index.html#getOff" class="ctaDiscount">Discount</a>
-                        <a href="index.html#newArrivals" class="ctaNewArrivals">New Arrivals</a>
+                        <a class="ctaDiscount" href="index.html#getOff">Discount</a>
+                        <a class="ctaNewArrivals" href="index.html#newArrivals" >New Arrivals</a>
                     </div>
                 </article>
                 <img src="img/laptop.webp" alt="Laptop Image" class="laptop">
