--- a/index.html
+++ b/index.html
@@ -81,22 +81,22 @@
         <!-- Hero Section -->
 
         <section class="heroSection">
-            <div class="heroSectionCentered">
-                <article class="paragraph">
-                    <h1 class="break">Break a Leg</h1>
-                    <h2 class="subtitle">¡Where your passion is just beginning!</h2>
-                    <div class="cta">
-                        <a class="ctaDiscount" href="index.html#getOff">Discount</a>
-                        <a class="ctaNewArrivals" href="index.html#newArrivals" >New Arrivals</a>
-                    </div>
-                </article>
-                <img src="img/laptop.webp" alt="Laptop Image" class="laptop">
-            </div>
+            <article class="info">
+                <h1 class="break">Break a Leg</h1>
+                <h2 class="sentence">Where your passion is just beginning!</h2>
+                <div class="cta">
+                    <a href="" class="ctaDiscount">Discount</a>
+                    <a href="" class="newArrivals">New arrivals</a>
+                </div>
+            </article>
+            <img src="img/laptop1.webp" alt="Laptop Image" class="laptop">
         </section>
 
         <!-- Best Sellers -->
 
         <section class="bestSellers">
+
+
 
         </section>
 
@@ -129,29 +129,33 @@
     <!-- Footer -->
 
     <footer class="footerContainer">
-        <section class="footer">
-            <articles class="socialMedia">
-                <h3>Contact us</h3>
-
-
-            </articles>
-            <articles class="logo">
-
-            </articles>
-            <articles class="payments">
+        <div class="footer">
+            <section class="socialMedia">
+                <h3 class="contactUs">Contact us..</h3>
+                <ul>
+                    <li><a href="https://www.instagram.com/" target="_blank" class="item"><img src="img/instagram.svg" alt="" class="itemSocial"></a></li>
+                    <li><a href="https://www.youtube.com/" target="_blank" class="item"><img src="img/youtube.svg" alt="" class="itemSocial"></a></li>
+                    <li><a href="https://www.facebook.com/" target="_blank" class="item"><img src="img/facebook.svg" alt="" class="itemSocial"></a></li>
+                    <li><a href="https://twitter.com/?lang=es" target="_blank" class="item"><img src="img/twitter.svg" alt="" class="itemSocial"></a></li>
+                    <li><a href="https://co.pinterest.com/" target="_blank" class="item"><img src="img/pinterest.svg" alt="" class="itemSocial"></a></li>
+                </ul>
+            </section>
+            <section class="brand">
+                <h3 class="nameLogo">Break a Leg</h3>
+                <img src="img/skull.svg" alt="Skull logo" class="skull">
+            </section>
+            <section class="payments">
                 <h3>Payments</h3>
-
-            </articles>
-
-
-        </section>
+                <img class="paymentCards" src="img/payments.webp" alt="Credit cards">
+            </section>
+        </div>
         <section class="development">
-            <img src="" alt="">
-            <article class="developer">
+            <img class="raccoon" src="img/logo_Raccoon.svg" alt="Raccoon brand">
+            <div class="developer">
                 <p>Developed and made with 💖 by Diego Marin </p>
                 <p>© 2023 Raccoon. All rights reserved.</p>
                 <p> Medellin - Colombia</p>
-            </article>
+            </div>
         </section>
     </footer>
 
