--- a/index.html
+++ b/index.html
@@ -81,6 +81,22 @@
         <!-- Hero Section -->
 
         <section class="heroSection">
+            <div class="heroSectionCentered">
+                <article class="info">
+                    <h1 class="break">Break a Leg</h1>
+                    <h2 class="subtitle">¡Where your passion is just beginning!</h2>
+                    <div class="cta">
+                        <a class="ctaDiscount" href="index.html#getOff">Discount</a>
+                        <a class="ctaNewArrivals" href="index.html#newArrivals" >New Arrivals</a>
+                    </div>
+                </article>
+
+            </div>
+            <img src="img/laptop1.webp" alt="Laptop Image" class="laptop">
+
+        </section>
+
+        <!-- <section class="heroSection">
             <article class="info">
                 <h1 class="break">Break a Leg</h1>
                 <h2 class="sentence">Where your passion is just beginning!</h2>
@@ -90,7 +106,7 @@
                 </div>
             </article>
             <img src="img/laptop1.webp" alt="Laptop Image" class="laptop">
-        </section>
+        </section> -->
 
         <!-- Best Sellers -->
 
