--- a/index.html
+++ b/index.html
@@ -90,10 +90,8 @@
                         <a class="ctaNewArrivals" href="index.html#newArrivals" >New Arrivals</a>
                     </div>
                 </article>
-
             </div>
             <img src="img/laptop1.webp" alt="Laptop Image" class="laptop">
-
         </section>
 
         <!-- <section class="heroSection">
@@ -118,9 +116,12 @@
 
         <!-- Advertising -->
 
-        <section class="advertising">
-
-
+        <section class="advertising mx-0">
+            <article class="advertisingMood">
+                <h2 class="subtitle">Live and feel on the edge</h2>
+                <h2 class="subtitle">Live and feel on the edge</h2>
+                <h2 class="subtitle">Live and feel on the edge</h2>
+            </article>
         </section>
 
         <!-- New Arrivals -->
