--- a/index.html
+++ b/index.html
@@ -133,9 +133,18 @@
         <!-- Get 25% Off -->
 
         <section class="getOff" id="getOff">
-
+            <article class="info">
+                <h2 class="title">Get 25% off</h2>
+                <div class="paragraph">
+                    <h3 class="subtitle">For purchases over $1000</h3>
+                    <p class="sentence">You get 25% off on one of our
+                    hoddies
+                    </p>
+                </div>
+                <a href="" class="cta">See more in details</a>
+            </article>
+            <img src="img/hoddy_White.webp" alt="" class="hoddy">
         </section>
-
         <!-- Gift Cards -->
 
         <section class="giftCards" id="giftCards">
