Update Best sellers Cards

--- a/index.html
+++ b/index.html
@@ -108,10 +108,165 @@
 
         <!-- Best Sellers -->
 
-        <section class="bestSellers">
-
-
-
+        <section class="bestSellers ">
+            <h2 class="subtitle">Best sellers</h2>
+            <div class="sectionCard d-flex flex-direction-row">
+                <article class="cardProducts m-2">
+                    <dic class="article">
+                        <img src="img/pic1.webp" alt="Outfit Image" class="outFit">
+                        <div class="info">
+                            <img src="img/wishlist_Icon.svg" alt="Heart icon">
+                            <p class="price">Outfit.................................$499</p>
+                            <a href="" class="linkStore">Add to cart</a>
+                        </div>
+                    </dic>
+                </article>
+                <article class="cardProducts m-2">
+                    <dic class="article">
+                        <img src="img/pic2.webp" alt="Outfit Image" class="outFit">
+                        <div class="info">
+                            <img src="img/wishlist_Icon.svg" alt="Heart icon">
+                            <p class="price">Outfit.................................$499</p>
+                            <a href="" class="linkStore">Add to cart</a>
+                        </div>
+                    </dic>
+                </article>
+                <article class="cardProducts m-2">
+                    <dic class="article">
+                        <img src="img/pic15.webp" alt="Outfit Image" class="outFit">
+                        <div class="info">
+                            <img src="img/wishlist_Icon.svg" alt="Heart icon">
+                            <p class="price">Outfit.................................$499</p>
+                            <a href="" class="linkStore">Add to cart</a>
+                        </div>
+                    </dic>
+                </article>
+                <article class="cardProducts m-2">
+                    <dic class="article">
+                        <img src="img/pic16.webp" alt="Outfit Image" class="outFit">
+                        <div class="info">
+                            <img src="img/wishlist_Icon.svg" alt="Heart icon">
+                            <p class="price">Outfit.................................$499</p>
+                            <a href="" class="linkStore">Add to cart</a>
+                        </div>
+                    </dic>
+                </article>
+                <article class="cardProducts m-2">
+                    <dic class="article">
+                        <img src="img/pic5.webp" alt="Outfit Image" class="outFit">
+                        <div class="info">
+                            <img src="img/wishlist_Icon.svg" alt="Heart icon">
+                            <p class="price">Outfit.................................$499</p>
+                            <a href="" class="linkStore">Add to cart</a>
+                        </div>
+                    </dic>
+                </article>
+            </div>
+            <div class="sectionCard g-1 d-flex flex-direction-row">
+                <article class="cardProducts m-2">
+                    <dic class="article">
+                        <img src="img/pic6.webp" alt="Outfit Image" class="outFit">
+                        <div class="info">
+                            <img src="img/wishlist_Icon.svg" alt="Heart icon">
+                            <p class="price">Outfit.................................$499</p>
+                            <a href="" class="linkStore">Add to cart</a>
+                        </div>
+                    </dic>
+                </article>
+                <article class="cardProducts m-2">
+                    <dic class="article">
+                        <img src="img/pic22.webp" alt="Outfit Image" class="outFit">
+                        <div class="info">
+                            <img src="img/wishlist_Icon.svg" alt="Heart icon">
+                            <p class="price">Outfit.................................$499</p>
+                            <a href="" class="linkStore">Add to cart</a>
+                        </div>
+                    </dic>
+                </article>
+                <article class="cardProducts m-2">
+                    <dic class="article">
+                        <img src="img/pic8.webp" alt="Outfit Image" class="outFit">
+                        <div class="info">
+                            <img src="img/wishlist_Icon.svg" alt="Heart icon">
+                            <p class="price">Outfit.................................$499</p>
+                            <a href="" class="linkStore">Add to cart</a>
+                        </div>
+                    </dic>
+                </article>
+                <article class="cardProducts m-2">
+                    <dic class="article">
+                        <img src="img/pic28.webp" alt="Outfit Image" class="outFit">
+                        <div class="info">
+                            <img src="img/wishlist_Icon.svg" alt="Heart icon">
+                            <p class="price">Outfit.................................$499</p>
+                            <a href="" class="linkStore">Add to cart</a>
+                        </div>
+                    </dic>
+                </article>
+                <article class="cardProducts m-2">
+                    <dic class="article">
+                        <img src="img/pic18.webp" alt="Outfit Image" class="outFit">
+                        <div class="info">
+                            <img src="img/wishlist_Icon.svg" alt="Heart icon">
+                            <p class="price">Outfit.................................$499</p>
+                            <a href="" class="linkStore">Add to cart</a>
+                        </div>
+                    </dic>
+                </article>
+            </div>
+            <div class="sectionCard g-1 d-flex flex-direction-row">
+                <article class="cardProducts m-2">
+                    <dic class="article">
+                        <img src="img/pic11.webp" alt="Outfit Image" class="outFit">
+                        <div class="info">
+                            <img src="img/wishlist_Icon.svg" alt="Heart icon">
+                            <p class="price">Outfit.................................$499</p>
+                            <a href="" class="linkStore">Add to cart</a>
+                        </div>
+                    </dic>
+                </article>
+                <article class="cardProducts m-2">
+                    <dic class="article">
+                        <img src="img/pic24.webp" alt="Outfit Image" class="outFit">
+                        <div class="info">
+                            <img src="img/wishlist_Icon.svg" alt="Heart icon">
+                            <p class="price">Outfit.................................$499</p>
+                            <a href="" class="linkStore">Add to cart</a>
+                        </div>
+                    </dic>
+                </article>
+                <article class="cardProducts m-2">
+                    <dic class="article">
+                        <img src="img/pic13.webp" alt="Outfit Image" class="outFit">
+                        <div class="info">
+                            <img src="img/wishlist_Icon.svg" alt="Heart icon">
+                            <p class="price">Outfit.................................$499</p>
+                            <a href="" class="linkStore">Add to cart</a>
+                        </div>
+                    </dic>
+                </article>
+                <article class="cardProducts m-2">
+                    <dic class="article">
+                        <img src="img/pic14.webp" alt="Outfit Image" class="outFit">
+                        <div class="info">
+                            <img src="img/wishlist_Icon.svg" alt="Heart icon">
+                            <p class="price">Outfit.................................$499</p>
+                            <a href="" class="linkStore">Add to cart</a>
+                        </div>
+                    </dic>
+                </article>
+                <article class="cardProducts m-2">
+                    <dic class="article">
+                        <img src="img/pic15.webp" alt="Outfit Image" class="outFit">
+                        <div class="info">
+                            <img src="img/wishlist_Icon.svg" alt="Heart icon">
+                            <p class="price">Outfit.................................$499</p>
+                            <a href="" class="linkStore">Add to cart</a>
+                        </div>
+                    </dic>
+                </article>
+            </div>
+            <a href="../views/store.html" class="ctaStore">See more...</a>
         </section>
 
         <!-- Advertising -->
