Update New Arrivals

--- a/index.html
+++ b/index.html
@@ -282,7 +282,33 @@
         <!-- New Arrivals -->
 
         <section class="newArrivals" id="newArrivals">
-
+            <h2 class="subtitle">New Arrivals</h2>
+            <div class="sectionCard d-flex flex-direction-row">
+                <article class="cardProducts m-0">
+                    <dic class="article">
+                        <img src="img/skull.svg" alt="Skull logo" class="skull">
+                        <img src="img/pic1.webp" alt="Outfit Image" class="outFit">
+                    </dic>
+                </article>
+                <article class="cardProducts m-0">
+                    <dic class="article">
+                        <img src="img/skull.svg" alt="Skull logo" class="skull">
+                        <img src="img/pic1.webp" alt="Outfit Image" class="outFit">
+                    </dic>
+                </article>
+                <article class="cardProducts m-0">
+                    <dic class="article">
+                        <img src="img/skull.svg" alt="Skull logo" class="skull">
+                        <img src="img/pic1.webp" alt="Outfit Image" class="outFit">
+                    </dic>
+                </article>
+                <article class="cardProducts m-0">
+                    <dic class="article">
+                        <img src="img/skull.svg" alt="Skull logo" class="skull">
+                        <img src="img/pic1.webp" alt="Outfit Image" class="outFit">
+                    </dic>
+                </article>
+            </div>
         </section>
 
         <!-- Get 25% Off -->
