Making New Arrivals

--- a/index.html
+++ b/index.html
@@ -287,28 +287,57 @@
                 <article class="cardProducts m-0">
                     <dic class="article">
                         <img src="img/skull.svg" alt="Skull logo" class="skull">
-                        <img src="img/pic1.webp" alt="Outfit Image" class="outFit">
+                        <img src="img/pic23.webp" alt="Outfit Image" class="outFit">
                     </dic>
                 </article>
                 <article class="cardProducts m-0">
                     <dic class="article">
                         <img src="img/skull.svg" alt="Skull logo" class="skull">
-                        <img src="img/pic1.webp" alt="Outfit Image" class="outFit">
+                        <img src="img/pic28.webp" alt="Outfit Image" class="outFit">
                     </dic>
                 </article>
                 <article class="cardProducts m-0">
                     <dic class="article">
                         <img src="img/skull.svg" alt="Skull logo" class="skull">
-                        <img src="img/pic1.webp" alt="Outfit Image" class="outFit">
+                        <img src="img/pic29.webp" alt="Outfit Image" class="outFit">
                     </dic>
                 </article>
                 <article class="cardProducts m-0">
                     <dic class="article">
                         <img src="img/skull.svg" alt="Skull logo" class="skull">
-                        <img src="img/pic1.webp" alt="Outfit Image" class="outFit">
+                        <img src="img/pic33.webp" alt="Outfit Image" class="outFit">
                     </dic>
                 </article>
             </div>
+
+            <div class="sectionCard d-flex flex-direction-row">
+                <article class="cardProducts m-0">
+                    <dic class="article">
+                        <img src="img/skull.svg" alt="Skull logo" class="skull">
+                        <img src="img/pic20.webp" alt="Outfit Image" class="outFit">
+                    </dic>
+                </article>
+                <article class="cardProducts m-0">
+                    <dic class="article">
+                        <img src="img/skull.svg" alt="Skull logo" class="skull">
+                        <img src="img/pic17.webp" alt="Outfit Image" class="outFit">
+                    </dic>
+                </article>
+                <article class="cardProducts m-0">
+                    <dic class="article">
+                        <img src="img/skull.svg" alt="Skull logo" class="skull">
+                        <img src="img/pic36.webp" alt="Outfit Image" class="outFit">
+                    </dic>
+                </article>
+                <article class="cardProducts m-0">
+                    <dic class="article">
+                        <img src="img/skull.svg" alt="Skull logo" class="skull">
+                        <img src="img/pic16.webp" alt="Outfit Image" class="outFit">
+                    </dic>
+                </article>
+            </div>
+            <a href="../views/store.html" class="ctaStore">See more...</a>
+
         </section>
 
         <!-- Get 25% Off -->
@@ -331,6 +360,7 @@
         <section class="giftCards" id="giftCards">
 
         </section>
+
     </main>
 
     <!-- Footer -->
