--- a/index.html
+++ b/index.html
@@ -284,12 +284,24 @@
         <section class="newArrivals" id="newArrivals">
             <h2 class="subtitle">New Arrivals</h2>
             <div class="sectionCard d-flex flex-direction-row">
+
                 <article class="cardProducts m-0">
                     <dic class="article">
-                        <img src="img/skull.svg" alt="Skull logo" class="skull">
+
+                        <input type="checkbox" id="new" class="new">
+                        <label for="new">
+                            <img src="img/skull.svg" alt="Skull logo" class="skull">
+                        </label>
+                        <div class="smallCard" id="new">
+                            <img src="img/pic23.webp" alt="Outfit Image" class="outFit">
+                            <p class="price">Outfit.................................$499</p>
+
+                        </div>
+
                         <img src="img/pic23.webp" alt="Outfit Image" class="outFit">
                     </dic>
                 </article>
+
                 <article class="cardProducts m-0">
                     <dic class="article">
                         <img src="img/skull.svg" alt="Skull logo" class="skull">
