--- a/index.html
+++ b/index.html
@@ -370,7 +370,51 @@
         <!-- Gift Cards -->
 
         <section class="giftCards" id="giftCards">
-
+            <h2 class="subtitle">Gift cards</h2>
+            <div class="containerGetOff">
+                <article  id="task" class="containerTask">
+                    <div class="sectionTasks">
+                        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img src="img/gestion.png" id="icon" alt="...">
+                                    <h3 class="subtitle">AUTOMATIZA FLUJOS DE TRABAJO</h3>
+                                    <p class="paragraph">Administra el flujo de documentos y procesos de negocio para múltiples usuarios.
+                                    </p>
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="img/archivo.png" id="icon" alt="...">
+                                    <h3 class="subtitle">RETENCIÓN DE DOCUMENTOS</h3>
+                                    <p class="paragraph">Depura y elimina documentos automáticamente en base a períodos específicos de retención.
+                                    </p>
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="img/reconocimiento.png" id="icon" alt="...">
+                                    <h3 class="subtitle">ANOTACIONES</h3>
+                                    <p class="paragraph">Agrega imagenes, sellos, notas y firmas electrónicas.</p>
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="img/tareas.png" id="icon" alt="...">
+                                    <h3 class="subtitle">RETENCIÓN DE DOCUMENTOS</h3>
+                                    <p class="paragraph">Depura y elimina documentos automáticamente en base a períodos específicos de retención</p>
+                                </div>
+                            </div>
+                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Previous</span>
+                            </button>>
+                            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Next</span>
+                            </button>
+                        </div>
+                    </div>
+                </article>
+                <article class="containerMessage">
+                    <h3 class="subtitle">It’s gettin’ on my nerves!</h3>
+                    <p class="paragraph">Now, you can buy and give away 4 <span class="highlighter">gift cards</span>gift cards </p>
+                </article>
+            </div>
         </section>
 
     </main>
