--- a/index.html
+++ b/index.html
@@ -372,37 +372,65 @@
         <section class="giftCards" id="giftCards">
             <h2 class="subtitle">Gift cards</h2>
             <div class="containerGetOff">
-                <article  id="task" class="containerTask">
-                    <div class="sectionTasks">
+                <article  id="task" class="containerCards">
+                    <div class="sectionCards">
                         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-                            <div class="carousel-inner">
-                                <div class="carousel-item active">
-                                    <img src="img/gestion.png" id="icon" alt="...">
-                                    <h3 class="subtitle">AUTOMATIZA FLUJOS DE TRABAJO</h3>
-                                    <p class="paragraph">Administra el flujo de documentos y procesos de negocio para múltiples usuarios.
+                            <div class="carousel-inner px-4">
+                                <div class="carousel-item text-center active card1">
+                                    <img src="img/brand_Black.svg" id="icon" alt="...">
+                                    <h3 class="subtitleGift">Gift Cards $100</h3>
+                                    <div class="socialMedia">
+                                        <img src="img/instagram_Black_Icon.svg" alt="" class="itemSocial">
+                                        <img src="img/youtube_black_Icon.svg" alt="" class="itemSocial">
+                                        <img src="img/facebook_Black_Icon.svg" alt="" class="itemSocial">
+                                        <img src="img/twitter_Black_Icon.svg" alt="" class="itemSocial">
+                                        <img src="img/pinterest_Black_Icon.svg" alt="" class="itemSocial">
+                                    </div>
+                                    <p class="paragraph">www.breakaLeg.com
                                     </p>
                                 </div>
-                                <div class="carousel-item">
-                                    <img src="img/archivo.png" id="icon" alt="...">
-                                    <h3 class="subtitle">RETENCIÓN DE DOCUMENTOS</h3>
-                                    <p class="paragraph">Depura y elimina documentos automáticamente en base a períodos específicos de retención.
+                                <div class="carousel-item text-center card2">
+                                    <img src="img/brand_White.svg" id="icon" alt="...">
+                                    <h3 class="subtitleGift">Gift Cards $200</h3> <div class="socialMedia">
+                                        <img src="img/instagram_Black_Icon.svg" alt="" class="itemSocial">
+                                        <img src="img/youtube_black_Icon.svg" alt="" class="itemSocial">
+                                        <img src="img/facebook_Black_Icon.svg" alt="" class="itemSocial">
+                                        <img src="img/twitter_Black_Icon.svg" alt="" class="itemSocial">
+                                        <img src="img/pinterest_Black_Icon.svg" alt="" class="itemSocial">
+                                    </div>
+                                    <p class="paragraph">www.breakaLeg.com
                                     </p>
                                 </div>
-                                <div class="carousel-item">
-                                    <img src="img/reconocimiento.png" id="icon" alt="...">
-                                    <h3 class="subtitle">ANOTACIONES</h3>
-                                    <p class="paragraph">Agrega imagenes, sellos, notas y firmas electrónicas.</p>
+                                <div class="carousel-item text-center card3">
+                                    <img src="img/brand_Black.svg" id="icon" alt="...">
+                                    <h3 class="subtitleGift">Gift Cards $500</h3>
+                                    <div class="socialMedia">
+                                        <img src="img/instagram_Black_Icon.svg" alt="" class="itemSocial">
+                                        <img src="img/youtube_black_Icon.svg" alt="" class="itemSocial">
+                                        <img src="img/facebook_Black_Icon.svg" alt="" class="itemSocial">
+                                        <img src="img/twitter_Black_Icon.svg" alt="" class="itemSocial">
+                                        <img src="img/pinterest_Black_Icon.svg" alt="" class="itemSocial">
+                                    </div>
+                                    <p class="paragraph">www.breakaLeg.com</p>
                                 </div>
-                                <div class="carousel-item">
-                                    <img src="img/tareas.png" id="icon" alt="...">
-                                    <h3 class="subtitle">RETENCIÓN DE DOCUMENTOS</h3>
-                                    <p class="paragraph">Depura y elimina documentos automáticamente en base a períodos específicos de retención</p>
+                                <div class="carousel-item text-center card4">
+                                    <img src="img/brand_Black.svg" id="icon" alt="...">
+                                    <h3 class="subtitleGift">Gift Cards $1000</h3>
+                                    <div class="socialMedia">
+                                        <img src="img/instagram_Black_Icon.svg" alt="" class="itemSocial">
+                                        <img src="img/youtube_black_Icon.svg" alt="" class="itemSocial">
+                                        <img src="img/facebook_Black_Icon.svg" alt="" class="itemSocial">
+                                        <img src="img/twitter_Black_Icon.svg" alt="" class="itemSocial">
+                                        <img src="img/pinterest_Black_Icon.svg" alt="" class="itemSocial">
+                                    </div>
+                                    <p class="paragraph">www.breakaLeg.com
+                                    </p>
                                 </div>
                             </div>
                             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
                                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                                 <span class="visually-hidden">Previous</span>
-                            </button>>
+                            </button>
                             <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
                                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                 <span class="visually-hidden">Next</span>
@@ -411,8 +439,8 @@
                     </div>
                 </article>
                 <article class="containerMessage">
-                    <h3 class="subtitle">It’s gettin’ on my nerves!</h3>
-                    <p class="paragraph">Now, you can buy and give away 4 <span class="highlighter">gift cards</span>gift cards </p>
+                    <h3 class="subtitleMessage">It’s gettin’ on my nerves!</h3>
+                    <p class="paragraph">Now, you can buy and give away 4 <span class="highlighter">gift cards</span>gift cards</p>
                 </article>
             </div>
         </section>
