--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
                 </article>
                 <article class="containerMessage">
                     <h3 class="subtitleMessage">It’s gettin’ on my nerves!</h3>
-                    <p class="paragraph">Now, you can buy and give away 4 <span class="highlighter">gift cards</span>gift cards</p>
+                    <p class="paragraph">Now, you can buy and give away 4 <span class="higthlighter">"gift cards"</span></p>
                 </article>
             </div>
         </section>
