--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
         <section class="bestSellers ">
             <h2 class="subtitle">Best sellers</h2>
-            <div class="sectionCard d-flex flex-direction-row">
+            <div class="sectionCard d-flex flex-row">
                 <article class="cardProducts m-2">
                     <dic class="article">
                         <img src="img/pic1.webp" alt="Outfit Image" class="outFit">
@@ -162,7 +162,7 @@
                     </dic>
                 </article>
             </div>
-            <div class="sectionCard g-1 d-flex flex-direction-row">
+            <div class="sectionCard g-1 d-flex flex-row">
                 <article class="cardProducts m-2">
                     <dic class="article">
                         <img src="img/pic6.webp" alt="Outfit Image" class="outFit">
@@ -214,7 +214,7 @@
                     </dic>
                 </article>
             </div>
-            <div class="sectionCard g-1 d-flex flex-direction-row">
+            <div class="sectionCard g-1 d-flex flex-row">
                 <article class="cardProducts m-2">
                     <dic class="article">
                         <img src="img/pic11.webp" alt="Outfit Image" class="outFit">
